# CapTable

./: .gitignore  Cargo.toml  README.md  test_input_4.csv  test_input_5.csv  test_input_6.csv
cap_table/: Cargo.toml  test_input_2.csv  test_input_3.csv
cap_table/src/: error.rs  main.rs  model.rs
cap_table_error/: Cargo.toml
cap_table_error/src/: lib.rs
cap_table_lib/: Cargo.toml
src/: error.rs  main.rs  model.rs
