[package]
name = "cap_table"
version = "0.1.0"
authors = ["Rick Price <rprice@pricemail.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"

csv = "1.1.2"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
serde_derive = "1.0.104"
