[package]
name = "cap_table"
version = "0.2.0"
authors = ["Frederick Price <fprice@pricemail.ca>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
thiserror = "2"

csv = "1.1.2"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
serde_derive = "1.0.104"
